--- a/templates/splash.html
+++ b/templates/splash.html
@@ -339,7 +339,7 @@
   </video>
 </div>
 
-<div id="permissions-modal" class="modal is-active">
+<div id="permissions-modal" class="modal is-active" onload="handleConfirmation()">
   <div class="modal-background"></div>
   <div class="modal-content">
     <p>
